# snackPersona

./: .gitignore  FUTURE_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  MEDIA_FEATURES.md  __init__.py  main.md  main.py  pyproject.toml  requirements.txt  sample_media_dataset.json
compiler/: compiler.md  compiler.py
config/: evolution_config.json  llm_presets.json  mutation_pools.json  seed_personas.json
docs/: flexible_genotype.md  future_improvements.md  media_and_diversity.md  system_architecture.md
evaluation/: README.md  bio_evaluator.py  diversity.py  evaluation.md  evaluator.py
evaluation/diversity/: genotype.py
examples/: README.md  flexible_genotype_demo.py  media_dataset_example.py
llm/: README.md  client.py  gemini_client.py  llm_client.py  llm_factory.py  llm_gateway.md  rate_limiter.py
llm/config/: llm_presets.json
orchestrator/: README.md  engine.py  operators.py  orchestrator.md
persona_store/: persona_store.md  store.py
simulation/: README.md  agent.py  environment.py  simulation.md
src/: chat.py
src/examples/: faction_example.py  island_example.py
src/integration/: adapter.py
src/llm/: rate_limiter.py
src/orchestrator/: README.md
src/persona_store/: README.md  dynamo_store.py
src/snackPersona/: main.py
src/snackPersona.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: dynamo_client.py  media_dataset.py
terraform/: main.tf  variables.tf
traveler/: main.py
utils/: data_models.py  logger.py
visualization/: __init__.py  diversity_plot.py  fitness_plot.py  persona_space.py  report.py
(+65 files in other folders)
