[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snackPersona"
version = "0.1.0"
description = "Persona evolution and simulation system"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["snackPersona*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
